Se documentan las solicitudes V3 y a la vez se refactorizan y mejoran algunos métodos